[gd_scene load_steps=2 format=3 uid="uid://b4ccq6icnrupa"]

[ext_resource type="Script" uid="uid://jrshs8rctcgu" path="res://scenes/claude-settings/claude-settings.gd" id="1_2ao2r"]

[node name="ClaudeSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ao2r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ApiKeyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Claude API Key:"

[node name="ApiKeyLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveLocallyCheckBox" type="CheckBox" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Not secure for shared/public PC. Value is stored  in local config file as-is. To erase local value, keep this checked, erase the key, and click 'Back' to erase the locally saved value. "
text = "Save Key Locally?"

[node name="ColorRect" type="ColorRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(0.241156, 0.241156, 0.241156, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SendContextAmountLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Up to how many messages from this sessions history do you want to send? Sending history increases cost of each transaction especially if messages in that history are substantial."
mouse_filter = 0
text = "Max Messages:"

[node name="SendContextAmountLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "1"
alignment = 1

[node name="ColorRect2" type="ColorRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(0.241156, 0.241156, 0.241156, 1)

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
